страници и кнопка назад

--- a/mop/Pages/MenuFirstPage.xaml
+++ b/mop/Pages/MenuFirstPage.xaml
@@ -9,6 +9,23 @@
       Title="MenuFirstPage">
 
     <Grid Background="White">
+
+        <Button Content="← назад"
+                    FontSize="34"
+                    FontWeight="Bold"
+                    Width="200"
+                    Background="Transparent"
+                    BorderThickness="0" 
+                    x:Name="BackBtn" Click="BackBtn_Click" Margin="95,43,1625,957">
+            <Button.Foreground>
+                <LinearGradientBrush>
+                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Foreground>
+        </Button>
+
         <StackPanel HorizontalAlignment="Center" 
                     VerticalAlignment="Center">
             <TextBlock Text="меню" 
@@ -24,7 +41,7 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
-           
+
             <Border CornerRadius="26"
                     Margin="0 10">
                 <Border.Background>
@@ -88,7 +105,7 @@
                    Margin="1269,0,-149,306"/>
         <Image Source="/Images/Vector.png"
                Width="800"
-                   Margin="-137,308,1257,-2" RenderTransformOrigin="0.5,0.5">
+                   Margin="-130,353,1250,-47" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
