--- a/mop/Pages/MenuSecondPage.xaml
+++ b/mop/Pages/MenuSecondPage.xaml
@@ -26,8 +26,113 @@
             </Button.Foreground>
         </Button>
 
-        <StackPanel Width="20">
-
+        <StackPanel VerticalAlignment="Center">
+            <TextBlock Text="информация" 
+                       FontSize="70" 
+                       Margin="0 0 0 15"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <Border CornerRadius="26" Width="200"
+                    Margin="0 10">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="бригады"
+                        x:Name="brigadeBtn"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="60"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0"/>
+            </Border>
+            <Border CornerRadius="26" Width="250"
+                    Margin="0 10"
+                    x:Name="emplBrd">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="сотрудники"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="60"
+                        x:Name="emplBtn"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0"/>
+            </Border>
+            <Border CornerRadius="26" Width="200"
+                    Margin="0 10"
+                    x:Name="clientsBrd">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="клиенты"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="60"
+                        x:Name="clientsBtn"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0"/>
+            </Border>
+            <Border CornerRadius="26" Width="180"
+                    Margin="0 10"
+                    x:Name="servicesBrd">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="услуги"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="60"
+                        x:Name="servicessBtn"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0"/>
+            </Border>
+            <Border CornerRadius="26" Width="200"
+                    Margin="0 10">
+                <Border.Background>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Button Content="объекты"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="60"
+                        x:Name="addressesBtn"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0"/>
+            </Border>
         </StackPanel>
         <Image Source="/Images/Vector.png"
                Width="800"
