--- a/mop/Pages/OrdersPage.xaml
+++ b/mop/Pages/OrdersPage.xaml
@@ -26,8 +26,20 @@
             </Button.Foreground>
         </Button>
 
-        <StackPanel Width="20">
-
+        <StackPanel VerticalAlignment="Center">
+            <TextBlock Text="оформление заказа" 
+                       FontSize="70" 
+                       Margin="0 0 0 15"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
         </StackPanel>
         <Image Source="/Images/Vector.png"
                Width="800"
