--- a/mop/Pages/MenuSecondPage.xaml
+++ b/mop/Pages/MenuSecondPage.xaml
@@ -56,7 +56,7 @@
                         Height="60"
                         Foreground="White"
                         Background="Transparent"
-                        BorderThickness="0"/>
+                        BorderThickness="0" Click="brigadeBtn_Click"/>
             </Border>
             <Border CornerRadius="26" Width="250"
                     Margin="0 10"
@@ -75,7 +75,7 @@
                         x:Name="emplBtn"
                         Foreground="White"
                         Background="Transparent"
-                        BorderThickness="0"/>
+                        BorderThickness="0" Click="emplBtn_Click"/>
             </Border>
             <Border CornerRadius="26" Width="200"
                     Margin="0 10"
@@ -94,7 +94,7 @@
                         x:Name="clientsBtn"
                         Foreground="White"
                         Background="Transparent"
-                        BorderThickness="0"/>
+                        BorderThickness="0" Click="clientsBtn_Click"/>
             </Border>
             <Border CornerRadius="26" Width="180"
                     Margin="0 10"
@@ -113,7 +113,7 @@
                         x:Name="servicessBtn"
                         Foreground="White"
                         Background="Transparent"
-                        BorderThickness="0"/>
+                        BorderThickness="0" Click="servicessBtn_Click"/>
             </Border>
             <Border CornerRadius="26" Width="200"
                     Margin="0 10">
@@ -131,7 +131,7 @@
                         x:Name="addressesBtn"
                         Foreground="White"
                         Background="Transparent"
-                        BorderThickness="0"/>
+                        BorderThickness="0" Click="addressesBtn_Click"/>
             </Border>
         </StackPanel>
         <Image Source="/Images/Vector.png"
