--- a/mop/Pages/AddressesPage.xaml
+++ b/mop/Pages/AddressesPage.xaml
@@ -16,7 +16,7 @@
                     Width="200"
                     Background="Transparent"
                     BorderThickness="0" 
-                    x:Name="BackBtn" Click="BackBtn_Click" Margin="95,43,1625,957">
+                    x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
             <Button.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -26,8 +26,20 @@
             </Button.Foreground>
         </Button>
 
-        <StackPanel Width="20">
-
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock Text="объекты" 
+           FontSize="70" 
+           Margin="0 0 0 15"
+           FontWeight="Bold"
+           HorizontalAlignment="Center">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush>
+                        <GradientStop Color="#C0D5B3" Offset="0"/>
+                        <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                        <GradientStop Color="#A3AEE6" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
         </StackPanel>
         <Image Source="/Images/Vector.png"
                Width="800"
