--- a/mop/Pages/BrigadesPage.xaml
+++ b/mop/Pages/BrigadesPage.xaml
@@ -28,7 +28,7 @@
 
         <StackPanel HorizontalAlignment="Center"
                     VerticalAlignment="Center">
-            <TextBlock Text="сотрудники" 
+            <TextBlock Text="бригады" 
                        FontSize="70" 
                        Margin="0 0 0 15"
                        FontWeight="Bold"
