--- a/mop/Pages/EmployeesPage.xaml
+++ b/mop/Pages/EmployeesPage.xaml
@@ -9,14 +9,30 @@
       Title="EmployeesPage">
 
     <Grid Background="White">
+        <Image Source="/Images/Vector.png"
+       Width="800"
+           Margin="1269,0,-149,306"/>
+        <Image Source="/Images/Vector.png"
+       Width="800"
+           Margin="-130,353,1250,-47" RenderTransformOrigin="0.5,0.5">
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-180"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
 
         <Button Content="← назад"
-                    FontSize="34"
-                    FontWeight="Bold"
-                    Width="200"
-                    Background="Transparent"
-                    BorderThickness="0" 
-                    x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
+                FontSize="34"
+                FontWeight="Bold"
+                Width="200"
+                ToolTip="возвращение назад"
+                Background="Transparent"
+                BorderThickness="0" 
+                x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
             <Button.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -105,7 +121,7 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            
+
                             <GridViewColumn Header="должность" 
                                             Width="380">
                                 <GridViewColumn.HeaderContainerStyle>
@@ -155,22 +171,66 @@
                     </GridView>
                 </ListView.View>
             </ListView>
+            <StackPanel Orientation="Horizontal">
+                <Border CornerRadius="40"
+                    Width="80">
+                    <Border.Background>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Button Content="+"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="80"
+                        ToolTip="добавление"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0" 
+                        x:Name="addBtn" Click="addBtn_Click" HorizontalAlignment="Center" Width="80"/>
+                </Border>
+                <Border CornerRadius="40"
+                    Width="80">
+                    <Border.Background>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Button Content="×"
+                        FontSize="40"
+                        FontWeight="Bold"
+                        Height="80"
+                        ToolTip="удаление"
+                        Foreground="White"
+                        Background="Transparent"
+                        BorderThickness="0" 
+                        x:Name="delBtn" Click="delBtn_Click"/>
+                </Border>
+                <Border CornerRadius="40"
+                    Width="80">
+                    <Border.Background>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Button Content="⋮"
+                            FontSize="40"
+                            FontWeight="Bold"
+                            Height="80"
+                            ToolTip="изменение"
+                            Foreground="White"
+                            Background="Transparent"
+                            BorderThickness="0" 
+                            x:Name="editBtn" Click="editBtn_Click"/>
+                </Border>
+            </StackPanel>
         </StackPanel>
-        <Image Source="/Images/Vector.png"
-               Width="800"
-                   Margin="1269,0,-149,306"/>
-        <Image Source="/Images/Vector.png"
-               Width="800"
-                   Margin="-130,353,1250,-47" RenderTransformOrigin="0.5,0.5">
-            <Image.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Image.RenderTransform>
-        </Image>
 
     </Grid>
 </Page>
